--- a/style.css
+++ b/style.css
@@ -70,20 +70,22 @@ body{
   background-color: var(--backgroundgray);
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  /* flex-direction: row; */
   width: 100%;
   height: 600px;
   align-items: center;
   justify-content: space-between;
-  padding: 60px;
-  text-align: center;
+  padding: 100px;
   border-radius: 0px 0px 20% 20%;
+  gap: 40px;
+  font-size: 20px;
+  text-align: center;
 }
 .number{
   border-radius: 50%;
+  text-align: center;
   align-self: center;
-  width: 36px;
-  height: 36px;
+  width: 46px;
+  height: 46px;
   padding: 8px;
   border: solid black 1px;
   background: #fff;
@@ -91,17 +93,56 @@ body{
 .one-data{
   display: flex;
   flex-direction: column;
+  align-content: center;
   gap: 20px;
   color: #24053e;
+  text-align: center;
 }
 .two-data{
   display: flex;
   gap: 20px;
   flex-direction: column;
-
+  align-content: center;
+  text-align: center;
 }
 .three-data{
   display: flex;
   gap: 20px;
   flex-direction: column;
+  text-align: center;
+}
+
+.description{
+  color: #24053e;
+}
+
+.last-container{
+  display: flex;
+  height: 100%;
+  background-color: #fff;
+  justify-content: center;
+}
+.figure{
+  display: flex;
+  background-color: #41fea0;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  align-content: center;
+}
+.person{
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+}
+.message{
+  background-color: #24053e;
+  color: white;
+  width: 400px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
+  gap: 40px;
 }
