--- a/style.css
+++ b/style.css
@@ -14,12 +14,16 @@ body{
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color:var(--backgroundpurple);
+  color: white;
+  min-height: 100vh;
 }
 header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px;
+  margin-bottom: 56px;
+  padding: 20px;
   background-color: var(--backgroundpurple);
   color: white;
 }
@@ -28,11 +32,13 @@ header{
   font-size: 1.5rem;
   font-family: 'Manrope';
   text-decoration: underline 2px var(--examplegreen);
+  text-underline-offset: 6px;
 }
 
 .hero-container{
-  background-color: var(--backgroundpurple);
-  color: rgb(0, 0, 0);
+  font-family: 'Fraunces';
+  background-color: #24053e;
+  width: 100%;
 }
 .hero-content{
   text-align: center;
@@ -44,4 +50,31 @@ header{
 }
 .hero-content span{
   text-decoration: underline 2px var(--examplegreen);
+}
+.hero-button{
+  display: inline-block;
+  color: #24053e;
+  background-color: var(--buttongreen);
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  width: 140px;
+  height: 60px;
+}
+
+.hero-image{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  bottom: -300px;
+  
+}
+.hero-image img{
+  width: 60%;
+  height: auto;
+}
+
+.features-container{
+
 }
